--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -33,23 +33,27 @@ img {
 .topnav {
   overflow: hidden;
   margin: 3.5%;
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
 }
 .header-logo {
-    float: left;
+  float: left;
 }
 .main-navbar {
-    float: right;
+  float: right;
 }
+
 .topnav a {
   float: left;
   display: block;
-  color: #000000;
   text-align: center;
   padding: 12px 12px;
   margin: 5px;
   text-decoration: none;
   font-size: 20px;
   font-family: Roboto, sans-serif;
+  color: black;
 }
 
 .topnav a:hover {
@@ -68,8 +72,22 @@ img {
   display: none;
 }
 
+.topnav a i {
+  color: #ff0000;
+}
+
+.topnav a i:hover {
+  color: #ffffff;
+}
+
+.topnav a i:active {
+  color: #ffffff;
+}
+
 @media screen and (max-width: 768px) {
-  .topnav a {display: none;}
+  .topnav a {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
@@ -77,7 +95,12 @@ img {
 }
 
 @media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+  }
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
@@ -90,29 +113,32 @@ img {
   }
 }
 
-
-
- @media screen and (max-width: 540px) {
-  .topnav a {display: none;}
+@media screen and (max-width: 570px) {
+  .topnav a {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
   }
-} 
+  .hero-headline {
+    font-size: 3.5rem;
+    white-space: normal;
+  }
+  .hero-text {
+    width: unset;
+    font-size: 0.5rem;
+  }
+}
 
 main {
-  font-size: 130%;
   font-weight: bolder;
   color: black;
   padding-top: 0.5vw;
   padding-left: 2vw;
   padding-right: 2vw;
-  margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
-
-
 }
 
 .modal-btn {
@@ -169,6 +195,33 @@ main {
   background-color: rgba(26, 39, 156, 0.4);
 }
 
+#confirm {
+  display: none;
+  position: absolute;
+  background: #232323;
+  left: 8%;
+  right: 8%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  top: -15px;
+  bottom: 15px;
+  z-index: 1;
+}
+
+#confirm p {
+  text-align: center;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+#confirm input {
+  text-align: center;
+  padding: 12px;
+}
+
 .content {
   margin: 5% auto;
   width: 100%;
@@ -180,12 +233,19 @@ main {
   overflow: hidden;
   position: relative;
   color: #fff;
-  padding-top: 10px;
+  padding: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .content {
+    padding: 0;
+  }
 }
 
 .modal-body {
   padding: 15px 8%;
   margin: 15px auto;
+  position: relative;
 }
 
 label {
@@ -215,7 +275,6 @@ input {
   display: block;
   margin-top: 7px;
   margin-bottom: 7px;
-  text-align: right;
   line-height: 0.3;
   opacity: 0;
   transition: 0.3s;
@@ -226,12 +285,13 @@ input {
 .formData[data-error-visible="true"] .text-control {
   border: 2px solid #e54858;
 }
-/* 
+/*
 input[data-error]::after {
     content: attr(data-error);
     font-size: 0.4em;
     color: red;
 } */
+
 .checkbox-label,
 .checkbox2-label {
   position: relative;
@@ -305,6 +365,7 @@ input[data-error]::after {
   opacity: 1;
   cursor: pointer;
   transform: scale(0.7);
+  z-index: 3;
 }
 .close:before,
 .close:after {
@@ -420,8 +481,8 @@ input[data-error]::after {
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
 }
+
 .hero-content::after {
   content: "";
   width: 100%;
@@ -448,7 +509,6 @@ input[data-error]::after {
 }
 .btn-signup {
   outline: none;
-  text-transform: capitalize;
   font-size: 1.3rem;
   padding: 15px 23px;
   margin: 0;
@@ -495,7 +555,7 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     white-space: normal;
   }
   .hero-text {
@@ -541,4 +601,5 @@ footer {
   border-radius: 8px;
   text-align: center;
 }
+
 
